<resources>
    <string name="app_name" translatable="false">Waseda Bus Schedule</string>
    <string name="sample_time" translatable="false">23:00</string>
    <string name="hint_text_destination">行き先: </string>
    <string name="sample_destination">サンプル行き先</string>
    <string name="sample_hour" translatable="false">60</string>
    <string name="sample_min" translatable="false">60</string>
    <string name="_60" translatable="false">60</string>
    <string name="semicolon" translatable="false">:</string>
    <string name="leaving_in" translatable="false">Leaving in</string>
    <string name="sample_text_route">サンプル　ルート</string>
    <string name="sample_route_option">サンプル経由</string>
    <string name="hint_departure_text">発</string>
    <string name="sample_departure_time" translatable="false">10:00</string>
    <string name="waseda_flag_0">学生会館経由</string>
    <string name="waseda_flag_1">西早稲田キャンパス経由、Twins行き</string>
    <string name="waseda_flag_2">Twins経由、西早稲田キャンパス行き</string>
    <string name="waseda_flag_3">中型とマイクロバス両方の運行</string>
    <string name="waseda_flag_4">早稲田キャンパス経由Twins行き</string>
    <string name="waseda_flag_5">Twins経由早稲田キャンパス行き</string>
    <string name="waseda_flag_6">中型とマイクロバス両方の運行</string>
    <string name="waseda_flag_7">前の便が到着次第運行。カウントダウンは目安</string>
    <string name="waseda_flag_8">バス２台の運行。前の便が到着次第運行。カウントダウンは目安</string>
    <string name="hint_text_monday">月曜日のスケジュール</string>
    <string name="hint_text_tuesday">火曜日のスケジュール</string>
    <string name="hint_text_wednesday">水曜日のスケジュール</string>
    <string name="hint_text_thursday">木曜日のスケジュール</string>
    <string name="hint_text_friday">金曜日のスケジュール</string>
    <string name="hint_text_saturday">土曜日のスケジュール</string>
    <string name="hint_text_sunday">日曜日はバスは出ていません。Sorry!</string>
    <string name="tab_text_to_waseda">早稲田キャンパス行き</string>
    <string name="tab_hint_text_to_nishi">西早稲田キャンパス行き</string>
    <string name="about" translatable="false">About</string>
    <string name="creator_etchee" translatable="false">Creator:Etchee</string>
    <string name="about_message">早稲田大学基幹理工学部（秋入学）３年生。元WISH（中野の国際学生寮）のスタッフ。
        \n\n 栃木県宇都宮市育ち、中学校３年〜高校生活は父親の仕事の転勤でアメリカのオハイオ州に住む。Androidアプリは2017年春休みにつくり始める。
    </string>
    <string name="twitter_link" translatable="false">twitter.com/rikuto_bigarms</string>
    <string name="about_author" translatable="false">About Author</string>
    <string name="author_links" translatable="false">Author Links</string>
    <string name="github_link" translatable="false">github.com/Etchee</string>
    <string name="email" translatable="false">rikuapple@gmail.com</string>
    <string name="message" translatable="false">Message</string>
    <string name="messagecontents">英語のみもOk!コネクション増やしたいので気軽にメッセください！お話しませう！
        趣味でEDM作ったり筋トレしたりもしています！\n\n iOSデベロッパーの方:iOS版作って下さい（笑）リソース渡します。　Androidデベロッパーの方: プルリク待ってます！！リソースもほしければ渡します。
    </string>
    <string name="todaysLastWas">今日の最終は:</string>
    <string name="empty_sample_last_bus_time_" translatable="false">60:60</string>
    <string name="deshita">でした。</string>
    <string name="arimasen">日曜日はバスは出ていません。</string>
    <string name="empty_last_bus_caution">※最終バスは、遅れてくる可能性があります。</string>
    <string name="tab_hint_text_map">経路図</string>
    <string name="key_map_api"
        translatable="false">
        AIzaSyAdA5DxnYWHncIDz2VSQyZc1-p9TcmWpwE
    </string>
    <string name="marker_label_waseda">早稲田キャンパス</string>
    <string name="marker_label_nishi">西早稲田キャンパス</string>
    <string name="marker_label_twins">生命医科センターTWins</string>
    <string name="marker_label_toyama">戸山キャンパス</string>
</resources>
