<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_background_height"
        android:background="@color/Black"
        android:scaleType="centerCrop" />
    <View
        android:id="@+id/drop_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height"
        android:background="@drawable/item_drop_shadow"
        android:layout_gravity="bottom"
        />

    <LinearLayout
        android:id="@+id/layout_container_time"
        android:orientation="horizontal"
        android:layout_gravity="end|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hint_text_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/PearlWhite"
            android:layout_marginBottom="@dimen/hint_text_margin_bottom"
            android:text="@string/leaving_in"
            android:fontFamily="sans-serif-thin"
            />


        <TextView
            android:id="@+id/item_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_hour"
            android:textColor="@color/PearlWhite"
            android:textSize="@dimen/item_time_text_size"
            android:fontFamily="sans-serif-thin"
            />


        <TextView
            android:id="@+id/semiColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/PearlWhite"
            android:fontFamily="sans-serif-thin"
            android:textSize="@dimen/item_time_text_size"
            />
        <TextView
            android:id="@+id/item_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_min"
            android:textColor="@color/PearlWhite"
            android:fontFamily="sans-serif-thin"
            android:textSize="@dimen/item_time_text_size" />
        <TextView
            android:id="@+id/semiColon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/PearlWhite"
            android:fontFamily="sans-serif-thin"
            android:textSize="@dimen/item_time_text_size"
            />
        <TextView
            android:id="@+id/item_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:text="@string/_60"
            android:textColor="@color/PearlWhite"
            android:fontFamily="sans-serif-thin"
            android:textSize="@dimen/item_time_text_size" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/center_items_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        >

        <TextView
            android:id="@+id/hint_text_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/PearlWhite"
            android:text="@string/hint_departure_text"
            android:textSize="@dimen/hint_text_very_small"
            />

        <TextView
            android:id="@+id/hint_route_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/sample_route_option"
            android:textColor="@color/PearlWhite"
            />

    </LinearLayout>



</FrameLayout>